--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -10,14 +10,15 @@
 
 .popup {
   font-family: 'Inter', Arial, sans-serif;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s linear;
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, .5);
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
   z-index: 10;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
