--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -8,16 +8,29 @@
 @import url('./__caption/popup__caption.css');
 @import url('./__image/popup__image.css');
 
+:root {
+    --error_color: #ff0000;
+}
+
 .popup {
-  font-family: 'Inter', Arial, sans-serif;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, .5);
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 10;
+    font-family: 'Inter', Arial, sans-serif;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, .5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 10;
+}
+
+.form__input_type_error {
+    border: none;
+    border-bottom: 1px solid var(--error_color);
+}
+
+.form__input-error {
+    color: var(--error_color);
 }
