--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -1,3 +1,7 @@
+:root {
+  --disable-color: rgba(100, 100, 100, 0.5);
+}
+
 .popup__button {
   width: 100%;
   height: 50px;
@@ -17,6 +21,13 @@
 .popup__button:hover {
   background: rgba(0, 0, 0, 0.8);
   cursor: pointer;
+}
+
+.popup__button:disabled {
+  background: transparent;
+  color: var(--disable-color);
+  cursor: not-allowed;
+  border: 1px solid var(--disable-color);
 }
 
 @media screen and (max-width: 568px) {
