--- a/src/blocks/card/__delete-button/card__delete-button.css
+++ b/src/blocks/card/__delete-button/card__delete-button.css
@@ -21,3 +21,11 @@
 .card__delete-button:hover {
   opacity: 0.6;
 }
+
+.card__delete-button:disabled {
+  display: none;
+}
+
+.card__delete-button:disabled {
+  display: none;
+}
